Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -35,10 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
@@ -62,7 +64,7 @@
    ],
    "source": [
     "# Code Here\n",
-    "A = numpy."
+    "A = n"
    ]
   },
   {
