--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,7 @@
    ],
    "source": [
     "# Code Here\n",
-    "A = np.array([[11402]])"
+    "A = np.array([[11402,192],[1371, 821]])"
    ]
   },
   {
