--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,8 @@
    ],
    "source": [
     "# Code Here\n",
-    "A = np.array([[11402,192],[1371, 821],[949, 1437], []])"
+    "A = np.array([[11402,192],[1371, 821],[949, 1437], [147,1448]])\n",
+    "B = np.array()"
    ]
   },
   {
