--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "# Code Here\n",
     "A = np.array([[11402,192],[1371, 821],[949, 1437], [147,1448]])\n",
-    "B = np.array()"
+    "B = np.array([[1,2,3],[4,5,]])"
    ]
   },
   {
