Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -44,28 +44,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A=\n",
-      " [[1402  191]\n",
-      " [1371  821]\n",
-      " [ 949 1437]\n",
-      " [ 147 1448]]\n",
-      "B=\n",
-      " [[1 2 3]\n",
-      " [4 5 6]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[11402,   192],\n",
+       "       [ 1371,   821],\n",
+       "       [  949,  1437],\n",
+       "       [  147,  1448]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Code Here\n",
     "A = np.array([[11402,192],[1371, 821],[949, 1437], [147,1448]])\n",
-    "B = np.array([[1,2,3],[4,5,]])"
+    "B = np.array([[1,2,3],[4,5,6]])\n",
+    "A"
    ]
   },
   {
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n"
    ]
   },
   {
