--- a/index.ipynb
+++ b/index.ipynb
@@ -44,19 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1402,  191],\n",
-       "       [1371,  821],\n",
-       "       [ 949, 1437],\n",
-       "       [ 147, 1448]])"
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +63,7 @@
     "# Code Here\n",
     "A = np.array([[1402,191],[1371, 821],[949, 1437], [147,1448]])\n",
     "B = np.array([[1,2,3],[4,5,6]])\n",
-    "A"
+    "B"
    ]
   },
   {
