--- a/index.ipynb
+++ b/index.ipynb
@@ -75,20 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of A: (4, 2)\n",
-      "Shape of B: (2, 3)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(4, 2)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code Here\n"
+    "# Code Here\n",
+    "A.shape"
    ]
   },
   {
