Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,23 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4, 2)"
+       "(2, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Code Here\n",
-    "A.shape"
+    "B.shape"
    ]
   },
   {
