Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,6 +107,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [
