Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,11 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "821\n"
+     ]
+    }
+   ],
    "source": [
-    "print(A)"
+    "print(A[1,1])"
    ]
   },
   {
