--- a/index.ipynb
+++ b/index.ipynb
@@ -107,19 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1402\n"
+      "1402\n",
+      "191\n"
      ]
     }
    ],
    "source": [
-    "print(A[0,0])"
+    "print(A[0,0])\n",
+    "print(A[0,1])"
    ]
   },
   {
