Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -115,13 +115,15 @@
      "output_type": "stream",
      "text": [
       "1402\n",
-      "191\n"
+      "191\n",
+      "1437\n"
      ]
     }
    ],
    "source": [
     "print(A[0,0])\n",
-    "print(A[0,1])"
+    "print(A[0,1])\n",
+    "print(A[2,1])"
    ]
   },
   {
