Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -116,14 +116,16 @@
      "text": [
       "1402\n",
       "191\n",
-      "1437\n"
+      "1437\n",
+      "147\n"
      ]
     }
    ],
    "source": [
     "print(A[0,0])\n",
     "print(A[0,1])\n",
-    "print(A[2,1])"
+    "print(A[2,1])\n",
+    "print(A[3,0])"
    ]
   },
   {
