--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,8 @@
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)\n"
+    "# Code Here (due to random data , your output might be different)\n",
+    "np.zeros([2])"
    ]
   },
   {
