Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,8 @@
    ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "np.zeros([2])"
+    "np.zeros([2,2])\n",
+    "[]"
    ]
   },
   {
