--- a/index.ipynb
+++ b/index.ipynb
@@ -159,29 +159,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "before random data:\n",
-      " [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
-      "\n",
-      "after random data:\n",
-      " [[2. 7. 5.]\n",
-      " [7. 9. 3.]\n",
-      " [6. 5. 9.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "np.zeros([2,2])\n",
-    "[]"
+    "np.zeros([3,3])\n"
    ]
   },
   {
