--- a/index.ipynb
+++ b/index.ipynb
@@ -176,6 +176,7 @@
    ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
+    "import\n",
     "np.zeros([3,3])\n"
    ]
   },
