Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,6 +159,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -176,7 +185,6 @@
    ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "import\n",
     "np.zeros([3,3])\n"
    ]
   },
