--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,8 @@
    ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "np.zeros([3,3])\n"
+    "np.zeros([3,3])\n",
+    "for i in range"
    ]
   },
   {
