--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,8 @@
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
     "np.zeros([3,3])\n",
-    "for i in range"
+    "for i in range(0,2):\n",
+    "    for j"
    ]
   },
   {
