Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
     "# Code Here (due to random data , your output might be different)\n",
     "np.zeros([3,3])\n",
     "for i in range(0,2):\n",
-    "    for j"
+    "    for j in range(0,2):\n",
+    "        "
    ]
   },
   {
