--- a/index.ipynb
+++ b/index.ipynb
@@ -168,24 +168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0., 0.],\n",
-       "       [0., 0.]])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-16-9fdffc34fe01>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-9fdffc34fe01>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "np.zeros([3,3])\n",
+    "X = np.zeros([3,3])\n",
     "for i in range(0,2):\n",
     "    for j in range(0,2):\n",
     "        "
