--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +177,28 @@
     "for i in range(0,2):\n",
     "    for j in range(0,2):\n",
     "        X[i,j] += random.randint(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7., 3., 0.],\n",
+       "       [9., 7., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
    ]
   },
   {
