Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.zeros([3,3])"
+    "X = np.zeros([3,3])\n",
+    "np.array([])"
    ]
   },
   {
