Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,12 +181,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-31-a090ba32c472>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-a090ba32c472>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    np.array([X[i,j] += random.randint(1,10) for i in range(3) for j in range(3)])\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.zeros([3,3])\n",
-    "np.array([X[i,j] += random.randint(1,10) for i in range(2)])"
+    "np.array([X[i,j] += random.randint(1,10) for i in range(3) for j in range(3)])"
    ]
   },
   {
