--- a/index.ipynb
+++ b/index.ipynb
@@ -181,21 +181,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-31-a090ba32c472>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-a090ba32c472>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    np.array([X[i,j] += random.randint(1,10) for i in range(3) for j in range(3)])\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([8., 6., 9., 4., 9., 1., 9., 2., 5.])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "X = np.zeros([3,3])\n",
-    "np.array([X[i,j] += random.randint(1,10) for i in range(3) for j in range(3)])"
+    "np.array([X[i,j] + random.randint(1,10) for i in range(3) for j in range(3)])"
    ]
   },
   {
