Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,23 +181,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.zeros([3,3])\n",
+    "Y=np.array([X[i,j] + random.randint(1,10) for i in range(3) for j in range(3)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([8., 6., 9., 4., 9., 1., 9., 2., 5.])"
+       "array([6., 7., 6., 4., 5., 8., 9., 8., 6.])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = np.zeros([3,3])\n",
-    "np.array([X[i,j] + random.randint(1,10) for i in range(3) for j in range(3)])"
+    "Y"
    ]
   },
   {
