--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "X = np.zeros([3,3])\n",
-    "Y=np.array([X[i,j] + random.randint(1,10) for i in range(3) for j in range(3)])"
+    "Y=[X[i,j] + random.randint(1,10) for i in range(3) for j in range(3)])"
    ]
   },
   {
