--- a/index.ipynb
+++ b/index.ipynb
@@ -181,26 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.zeros([3,3])\n",
-    "Y=[X[i,j] + random.randint(1,10) for i in range(3) for j in range(3)])"
+    "Y=[X[i,j] + random.randint(1,10) for i in range(3) for j in range(3)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6., 7., 6., 4., 5., 8., 9., 8., 6.])"
+       "[1.0, 5.0, 7.0, 4.0, 8.0, 8.0, 2.0, 5.0, 5.0]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
