Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,26 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.zeros([3,3])\n",
-    "Y=[X[i,j] + random.randint(1,10) for i in range(3) for j in range(3)]"
+    "Y=[[X[i,j] + random.randint(1,10) for i in range(3)] for j in range(3)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.0, 5.0, 7.0, 4.0, 8.0, 8.0, 2.0, 5.0, 5.0]"
+       "[[10.0, 3.0, 5.0], [8.0, 4.0, 2.0], [5.0, 2.0, 2.0]]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
