Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,26 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.zeros([3,3])\n",
-    "Y=[[X[i,j] + random.randint(1,10) for i in range(3)] for j in range(3)]"
+    "Y=np.array([[X[i,j] + random.randint(1,10) for i in range(3)] for j in range(3)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[10.0, 3.0, 5.0], [8.0, 4.0, 2.0], [5.0, 2.0, 2.0]]"
+       "array([[5., 7., 3.],\n",
+       "       [7., 9., 3.],\n",
+       "       [6., 4., 5.]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
