Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,28 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.zeros([3,3])\n",
-    "Y=np.array([[X[i,j] + random.randint(1,10) for i in range(3)] for j in range(3)])"
+    "Y=np.array([[X[i,j] + 2 for i in range(3)] for j in range(3)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[5., 7., 3.],\n",
-       "       [7., 9., 3.],\n",
-       "       [6., 4., 5.]])"
+       "array([[2., 2., 2.],\n",
+       "       [2., 2., 2.],\n",
+       "       [2., 2., 2.]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
