--- a/index.ipynb
+++ b/index.ipynb
@@ -181,12 +181,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.zeros([3,3])\n",
-    "Y=np.array([[X[i,j] + 2 for i in range(3)] for j in range(3)])"
+    "Y=np.array([[X[i,j] + random.randint(1,10) for i in range(3)] for j in range(3)])"
    ]
   },
   {
