Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,20 +173,20 @@
    "outputs": [],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "X = np.zeros([3,3])\n",
-    "for i in range(3):\n",
-    "    for j in range(3):\n",
-    "        X[i,j] += random.randint(1,10)"
+    "# X = np.zeros([3,3])\n",
+    "# for i in range(3):\n",
+    "#     for j in range(3):\n",
+    "#         X[i,j] += random.randint(1,10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.zeros([3,3])\n",
-    "Y=np.array([[X[i,j] + random.randint(1,10) for i in range(3)] for j in range(3)])"
+    "X=np.array([[X[i,j] + random.randint(1,10) for i in range(3)] for j in range(3)])"
    ]
   },
   {
