--- a/index.ipynb
+++ b/index.ipynb
@@ -262,7 +262,9 @@
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "# Code Here (due to random data , your output might be different)\n",
+    "X = np.zeros([3,3])\n",
+    "X=np.array([[X[i,j] + random.randint(1,10) for i in range(3)] for j in range(3)])"
    ]
   },
   {
