Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_random_matrix"
+    "def create_random_matrix()"
    ]
   },
   {
