Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_random_matrix()"
+    "def create_random_matrix(n_rows, n_cols):\n",
+    "    X = np.zeros([n_rows, n_cols])\n",
+    "    "
    ]
   },
   {
