--- a/index.ipynb
+++ b/index.ipynb
@@ -245,13 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_random_matrix(n_rows, n_cols):\n",
     "    X = np.zeros([n_rows, n_cols])\n",
-    "    "
+    "    X=np.array([[X[i,j] + random.randint(1,10) for i in range(n_rows)] for j in range(n_cols)])\n",
+    "    return X"
    ]
   },
   {
