Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,26 +257,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final output\n",
-      "\n",
-      " [[12.  4. 13.  8.]\n",
-      " [13.  5.  9.  9.]\n",
-      " [11. 11. 11. 17.]\n",
-      " [16. 14.  8. 10.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 9.,  9., 10.,  4.],\n",
+       "       [ 4.,  6.,  7.,  6.],\n",
+       "       [ 2.,  8., 14., 17.],\n",
+       "       [ 4., 16.,  8.,  8.]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "X = np.zeros([4,4])\n",
-    "X=np.array([[X[i,j] + random.randint(1,10) for i in range(3)] for j in range(3)])"
+    "X = create_random_matrix(4,4)\n",
+    "Y = create_random_matrix(4,4)\n",
+    "X+Y"
    ]
   },
   {
